EscapeRoute weiter durch Basra ersetzt

--- a/Repast.settings
+++ b/Repast.settings
@@ -12,6 +12,6 @@
     <string>SettingsRegistryId</string>
     <string>Repast.registry</string>
     <string>LastLoadedScenario</string>
-    <string>C:\Users\mgenu\git\refugee\Refugee\EscapeRoute.rs</string>
+    <string>C:\Users\Gerhard Genuit\git\Basra\Basra.rs</string>
   </hashtable>
 </simphony.settings.SettingsRegistry>
